--- a/Global/Views/Customer/Index.cshtml
+++ b/Global/Views/Customer/Index.cshtml
@@ -1,12 +1,30 @@
-﻿<link href="@Url.Content("~/Content/customer/list.css")" type="text/css" rel="Stylesheet" />
-<table id='tblListCustomer' cellspacing="0" cellpadding="0" width="100%">
-    <thead>
-        <tr>
-            <th>Nama</th>
-            <th>Sisa Tagihan</th>
-        </tr>
-    </thead>
-    <tbody>
-        
-    </tbody>
+﻿@model IList<Global.Repository.models.Customer>
+<link href="@Url.Content("~/Content/customer/list.css")" type="text/css" rel="Stylesheet" />
+<table id='tblListCustomerContainer' cellspacing="0" cellpadding="0" width="100%">
+    <tr>
+        <td width="80%">
+            <table id="tblListCustomer" cellpadding="0" cellspacing="0" width="100%">
+                <thead>
+                    <tr>
+                        <th>Nama</th>
+                        <th>Sisa Tagihan</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (Global.Repository.models.Customer cust in Model)
+                    {
+                        <tr>
+                            <td>@cust.Name</td>
+                            <td>@cust.Outstanding</td>
+                        </tr>
+                    } 
+                </tbody>
+            </table>
+        </td>
+        <td width="20%">
+            <div>
+                @Html.ActionLink("Tambah Pelanggan", "AddCustomer", "Customer")
+            </div>
+        </td>
+    </tr>
 </table>
