--- a/Global/Views/Customer/AddCustomer.cshtml
+++ b/Global/Views/Customer/AddCustomer.cshtml
@@ -1,4 +1,5 @@
-﻿@using (Html.BeginForm("AddCustomer","Customer", FormMethod.Post)){
+﻿<h2>Tambah Pelanggan</h2>
+@using (Html.BeginForm("AddCustomer","Customer", FormMethod.Post)){
     <table cellpadding="0" cellspacing="0" width="80%">
         <tr>
             <td>Nama</td>
