--- a/Global/Views/Penyewaan/AddPenyewaan.cshtml
+++ b/Global/Views/Penyewaan/AddPenyewaan.cshtml
@@ -1,4 +1,7 @@
 ﻿<link href="@Url.Content("~/Content/penyewaan/add.css")" type="text/css" rel="Stylesheet" />
+<link href="@Url.Content("~/Content/penyewaan/addItem.css")" type="text/css" rel="Stylesheet" />
+<script src="@Url.Content("~/Scripts/penyewaan/penyewaan.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/penyewaan/selectCustomer.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/penyewaan/addItem.js")" type="text/javascript"></script>
 <h2>Tambah Penyewaan</h2>
 <table cellpadding="0" cellspacing="0" width="80%">
@@ -8,7 +11,10 @@
                 <tr>
                     <td class="red">Pilih Pelanggan</td>
                     <td>
+                        <span id='statusSelectCust'></span>
                         <input type="text" name="Name" id='inputCustomer' required placeholder='Ketik Nama Pelanggan' autocomplete="off"/>
+                        
+                        <input type='hidden' id='custId' />
                         <div id='searchCustResult'></div>
                     </td>
                 </tr>
@@ -18,18 +24,18 @@
                 </tr>
                 <tr>
                     <td>Tanggal Penyewaan</td>
-                    <td><input type="text" name="Name" required placeholder="Pilih Tanggal Penyewaan"/></td>
+                    <td><input type="text" name="fromdate" required placeholder="Pilih Tanggal Penyewaan" id='fromdate'/></td>
                 </tr>
                 <tr>
                     <td>Tanggal Pengembalian</td>
-                    <td><input type="text" name="Name" required placeholder="Pilih Tanggal Pengembalian"/></td>
+                    <td><input type="text" name="todate" required placeholder="Pilih Tanggal Pengembalian" id='todate'/></td>
                 </tr>
             </table>
         </td>
     </tr>
     <tr>
         <td>
-            <table class="table table-striped">
+            <table class="table table-striped" id='tblitem'>
                 <thead>
                     <tr>
                         <th>Barang</th>
@@ -37,22 +43,37 @@
                         <th width="10%" class='center'>Qty</th>
                         <th width="20%" class='right'>Harga</th>
                         <th width="20%" class='right'>Total</th>
+                        <th width="3%"></th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>
+                            <input type='text' name='itemname'/>
+                        </td>
+                        <td>
+                            <textarea></textarea>
+                        </td>
+                        <td>
+                            <input type='number' name='qty' class='itemqty' min='1'/>
+                        </td>
+                        <td>
+                            <input type='text' name='harga' class='itemharga'/>
+                        </td>
+                        <td>
+                            <div>
+                            <div class='itemtotalCcy'>Rp</div>
+                            <div class='itemtotalValue'>...</div>
+                            </div>
+                        </td>
+                        <td><div id='itemRemove'>X</div></td>
                     </tr>
                 </tbody>
                 <tfoot>
                     <tr>
-                        <td colspan="3">Tambah Baris</td>
+                        <td colspan="3"><div id='addRow'><b style='font-size:14px;'>+</b> <span style='font-size:11px;'>Tambah Baris</span></div></td>
                         <td class='right'>Sub Total</td>
-                        <td class='right'>Rp. 10000000</td>
+                        <td class='right' colspan="2">Rp. 10000000</td>
                     </tr>
                 </tfoot>
             </table>
