--- a/Global/Views/Penyewaan/AddPenyewaan.cshtml
+++ b/Global/Views/Penyewaan/AddPenyewaan.cshtml
@@ -3,6 +3,7 @@
 <script src="@Url.Content("~/Scripts/penyewaan/penyewaan.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/penyewaan/selectCustomer.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/penyewaan/addItem.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/CurrencyRounding.js")" type="text/javascript"></script>
 <h2>Tambah Penyewaan</h2>
 <table cellpadding="0" cellspacing="0" width="80%">
     <tr>
@@ -47,36 +48,23 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>
-                            <input type='text' name='itemname'/>
-                        </td>
-                        <td>
-                            <textarea></textarea>
-                        </td>
-                        <td>
-                            <input type='number' name='qty' class='itemqty' min='1'/>
-                        </td>
-                        <td>
-                            <input type='text' name='harga' class='itemharga'/>
-                        </td>
-                        <td>
-                            <div>
-                            <div class='itemtotalCcy'>Rp</div>
-                            <div class='itemtotalValue'>...</div>
-                            </div>
-                        </td>
-                        <td><div id='itemRemove'>X</div></td>
-                    </tr>
                 </tbody>
                 <tfoot>
                     <tr>
                         <td colspan="3"><div id='addRow'><b style='font-size:14px;'>+</b> <span style='font-size:11px;'>Tambah Baris</span></div></td>
-                        <td class='right'>Sub Total</td>
-                        <td class='right' colspan="2">Rp. 10000000</td>
+                        <td class='right'><span class='summary'>Total Akhir</span> </td>
+                        <td class='right'>
+                            <span class='summary summaryCcy'>Rp</span>
+                            <span class='summary summaryValue' id='totalakhir'></span>
+                        </td>
+                        <td></td>
                     </tr>
                 </tfoot>
             </table>
+            <div id='btnFooter'>
+                <button>Simpan</button>
+                @Html.ActionLink("Batal", "Index", "Penyewaan")
+            </div>
         </td>
     </tr>
 </table>
