--- a/Global/Views/Penyewaan/AddPenyewaan.cshtml
+++ b/Global/Views/Penyewaan/AddPenyewaan.cshtml
@@ -62,7 +62,7 @@
                 </tfoot>
             </table>
             <div id='btnFooter'>
-                <button>Simpan</button>
+                <button id='btnSave'>Simpan</button>
                 @Html.ActionLink("Batal", "Index", "Penyewaan")
             </div>
         </td>
