--- a/Global/Views/Penyewaan/Index.cshtml
+++ b/Global/Views/Penyewaan/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<h2>Penyewaan</h2>
+﻿@model IList<Global.ReportingRepository.model.RentalListViewReport>
+<h2>Penyewaan</h2>
 <table id='tblListPenyewaanContainer' cellspacing="0" cellpadding="0" width="100%">
     <tr>
         <td width="80%">
@@ -14,6 +15,17 @@
                     </tr>
                 </thead>
                 <tbody> 
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>@Html.ActionLink(item.RentalNo, "DetailPenyewaan", new { rentalId = item.RentalId.ToString() })</td>
+                            <td>@item.CustomerName</td>
+                            <td>@item.TransactionDate</td>
+                            <td>@item.Total.ToString("N")</td>
+                            <td>@item.OutStanding.ToString("N")</td>
+                            <td>Status</td>
+                        </tr>
+                    }
                 </tbody>
             </table>
         </td>
