--- a/Global/Views/Penyewaan/DetailPenyewaan.cshtml
+++ b/Global/Views/Penyewaan/DetailPenyewaan.cshtml
@@ -12,20 +12,20 @@
             <div class="RentalHeaderDiv">
                 <table id="RentalHeaderTbl">
                     <tr>
-                        <td class="headerTittle">No Penyewaan</th>
+                        <td class="headerTittle">No Penyewaan</td>
                         <td class="headerContent">@Model.RentalNo</td>
                     </tr>
                     <tr>
-                        <td class="headerTittle">Penyewa</th>
+                        <td class="headerTittle">Penyewa</td>
                         <td class="headerContent">@ViewBag.CustomerName</td>
                     </tr>
                     <tr>
-                        <td class="headerTittle">Tanggal Peminjaman</th>
-                        <td class="headerContent">@Model.TransactionDate.Date.ToString("dd-MMM-yyyy")</td>
+                        <td class="headerTittle">Tanggal Peminjaman</td>
+                        <td class="headerContent">@Model.TransactionDate.Date.ToString("dd MMM yyyy")</td>
                     </tr>
                     <tr>
-                        <th class="headerTittle">Tanggal Pengembalian</th>
-                        <td class="headerContent">@Model.DueDate.Date.ToString("dd-MMM-yyyy")</td>
+                        <th class="headerTittle">Tanggal Pengembalian</td>
+                        <td class="headerContent">@Model.DueDate.Date.ToString("dd MMM yyyy")</td>
                     </tr>
                 </table>
             </div>
@@ -53,8 +53,8 @@
                                 <td>@item.PartName</td> 
                                 <td>@item.Description</td>
                                 <td class="rightAlign">@item.Qty</td>
-                                <td class="rightAlign">@item.Harga.ToString("N")</td>
-                                <td class="rightAlign">@item.Total.ToString("N")</td> 
+                                <td class="rightAlign">Rp. @item.Harga.ToString("N")</td>
+                                <td class="rightAlign">Rp. @item.Total.ToString("N")</td> 
                             </tr>
                             no = no + 1;
                         }
@@ -63,7 +63,7 @@
                         <tr>
                             <td colspan="4"></td>
                             <td class="summaryField">Total</td>
-                            <td class="summaryField">@ViewBag.Summary.Total.ToString("N")</td>
+                            <td class="summaryField">Rp. @ViewBag.Summary.Total.ToString("N")</td>
                         </tr>
                     </tfoot>
                 </table>
