--- a/Global/Views/Shared/_Layout_Admin.cshtml
+++ b/Global/Views/Shared/_Layout_Admin.cshtml
@@ -5,7 +5,7 @@
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/jquery-ui/jquery-ui-1.8.20.custom.css")" rel="stylesheet" type="text/css" />
-    //<link href="@Url.Content("~/Content/bootstrap.css")" rel="stylesheet" type="text/css" />
+    @*<link href="@Url.Content("~/Content/bootstrap.css")" rel="stylesheet" type="text/css" />*@
     <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery-ui-1.8.20.custom.min.js")" type="text/javascript"></script>
@@ -23,6 +23,7 @@
                 <ul id="menu">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Penyewaan", "Index", "Penyewaan")</li>
+                    <li>@Html.ActionLink("Penerimaan", "Index", "Penerimaan")</li>
                     <li>@Html.ActionLink("Barang", "Index", "Item")</li>
                     <li>@Html.ActionLink("Pelanggan", "Index", "Customer")</li>
                 </ul>
