--- a/Global/Views/Penyewaan/DetailPenyewaan.cshtml
+++ b/Global/Views/Penyewaan/DetailPenyewaan.cshtml
@@ -59,16 +59,24 @@
                                     <tr>
                                         <td>@no</td>
                                         <td>@item.PartName</td> 
-                                        <td>@item.Description</td>
+                                        <td>@item.Deskripsi</td>
                                         <td class="rightAlign">@item.Qty</td>
                                         <td class="rightAlign">Rp @item.Harga.ToString("N")</td>
-                                        @if (@Model.Status == "Return"){<td class="rightAlign">Rp @item.Total.ToString("N")</td> }
+                                        @if (@Model.Status == "Return"){<td class="rightAlign">Rp @item.Denda.ToString("N")</td> }
                                         <td class="rightAlign">Rp @item.Total.ToString("N")</td> 
                                     </tr>
                                     no = no + 1;
                                 }
                             </tbody>
                             <tfoot>
+                                @if (@Model.Status == "Return")
+                                {
+                                    <tr>
+                                        <td colspan="5"></td>
+                                        <td class="summaryField">Total Denda</td>
+                                        <td class="summaryField">Rp @ViewBag.Summary.TotalDenda.ToString("N")</td>
+                                    </tr>
+                                }
                                 <tr>
                                     @if (@Model.Status == "Return")
                                     {
