--- a/Global/Views/Penyewaan/DetailPenyewaan.cshtml
+++ b/Global/Views/Penyewaan/DetailPenyewaan.cshtml
@@ -4,8 +4,12 @@
     var no = 1;
 }
 <link href="@Url.Content("~/Content/penyewaan/detail.css")" type="text/css" rel="Stylesheet" />
+<script src="@Url.Content("~/Scripts/CurrencyRounding.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/FormatDateTime.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/penyewaan/historyReceive.js")" type="text/javascript"></script>
 
 <h2>Detail Penyewaan</h2>
+<input type='hidden' value='@Model.RentalId' id='rentalId'/>
 <table width="100%" style="border:0px solid #FFF;">
     <tr valign="top">
         <td width="80%">
@@ -107,5 +111,22 @@
             </table>
         </td>
     </tr>
-    
+    <tr>
+        <td>
+            <table width="500px" id='historyReceive' cellpadding='0px' cellspacing='0px'>
+                <thead>
+                    <tr>
+                        <th colspan='3'>Riwayat Penerimaan:</th>
+                    </tr>
+                    <tr>
+                        <th>No Penerimaan</th>
+                        <th>Tanggal Penerimaan</th>
+                        <th class='rightAlign'>Jumlah Yang Dibayar</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </td>
+    </tr>    
 </table>      
