--- a/Global/Views/Home/Index.cshtml
+++ b/Global/Views/Home/Index.cshtml
@@ -1,1 +1,9 @@
-﻿TEST
+﻿<script src="@Url.Content("~/Scripts/home/home.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/highcharts.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/CurrencyRounding.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/FormatDateTime.js")" type="text/javascript"></script>
+
+<center>
+  <div id="title"></div>
+  <div id="grafik-container"></div>
+</center>
