--- a/Global/Views/Home/Index.cshtml
+++ b/Global/Views/Home/Index.cshtml
@@ -1,9 +1,51 @@
-﻿<script src="@Url.Content("~/Scripts/home/home.js")" type="text/javascript"></script>
+﻿<link href="@Url.Content("~/Content/home/home.css")" type="text/css" rel="Stylesheet" />
+<script src="@Url.Content("~/Scripts/home/home.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/highcharts.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/CurrencyRounding.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/FormatDateTime.js")" type="text/javascript"></script>
 
 <center>
-  <div id="title"></div>
+  <table>
+    <tr>
+      <td id="left-container">
+        <div class="rentaldashboarddiv">
+          <label class="header">Analisa Peminjaman</label>
+          <table class="content">
+            <tr>
+              <td class="bold">Total Peminjaman hari Ini</td>
+              <td class="right" id="TotalRentalToday"></td>
+            </tr>
+            <tr>
+              <td class="bold">Total Peminjaman Bulan Ini</td>
+              <td class="right" id="TotalRentalThisMonth"></td>
+            </tr>
+            <tr>
+              <td class="bold">Total Peminjaman Tahun Ini</td>
+              <td class="right" id="TotalRentalThisYear"></td>
+            </tr>
+          </table>          
+        </div>
+      </td>
+      <td id="right-container">
+        <div class="outstandingdashboarddiv">
+          <label class="header">Analisa Piutang</label>
+          <table class="content">
+            <tr>
+              <td class="bold">Total Piutang Hari Ini</td>
+              <td class="right" id="TotalOutstandingToday"></td>
+            </tr>
+            <tr>
+              <td class="bold">Total Piutang Bulan Ini</td>
+              <td class="right" id="TotalOutstandingThisMonth"></td>
+            </tr>
+            <tr>
+              <td class="bold">Total Piutang Tahun Ini</td>
+              <td class="right" id="TotalOutstandingThisYear"></td>
+            </tr>
+          </table>
+        </div>
+      </td>
+    </tr>
+  </table>
   <div id="grafik-container"></div>
 </center>
